# soledex

./: .gitignore  CMakeLists.txt  README.md  plan.md
core/include/pokedex/: base64.h  battery.h  card.h  card_browser.h  card_prefetch.h  card_query.h  deck.h  deck_screen.h  deck_sort.h  deck_view.h  display.h  geometry.h  gesture.h  hit_test.h  home_screen.h  keyboard.h  layout.h  png_info.h  render.h  tcg.h  wav.h
core/src/: base64.cpp  battery.cpp  card_browser.cpp  card_prefetch.cpp  deck.cpp  deck_screen.cpp  deck_sort.cpp  deck_view.cpp  gesture.cpp  hit_test.cpp  home_screen.cpp  keyboard.cpp  layout.cpp  png_info.cpp  render.cpp  tcg.cpp  wav.cpp
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/cmake/: gen_secrets.cmake
firmware/components/m5gfx/: PATCH_NOTES.md
firmware/components/m5gfx/src/: M5GFX.cpp
firmware/main/: CMakeLists.txt  idf_component.yml  m5gfx_display.cpp  m5gfx_display.h  main.cpp  net.cpp  net.h  wifi.cpp  wifi.h
host/: main_sdl.cpp  sdl_display.cpp  sdl_display.h
test/: base64_test.cpp  battery_test.cpp  card_browser_test.cpp  card_prefetch_test.cpp  deck_screen_test.cpp  deck_sort_test.cpp  deck_test.cpp  deck_view_test.cpp  fake_display.h  gesture_test.cpp  hit_test_test.cpp  home_screen_test.cpp  keyboard_test.cpp  layout_test.cpp  png_info_test.cpp  png_test_util.h  render_test.cpp  tcg_test.cpp  wav_test.cpp
tools/: gen_assets.py  nginx-soledex-stt.conf  stt_client.py  voice_to_cards.py  whisper-stt.service
